[package]
name = "bevy_berrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable optimisation just for dependencies e.g. Bevy
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
	"animation",
	"bevy_animation",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_pbr",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"filesystem_watcher",
	"png",
	"x11",
]

[dependencies.bevy_kira_audio]
version = "0.15.0"
default-features = false
features = [
#	"wav",
#	"flac",
#	"mp3",
	"ogg",
#	"settings_loader",
]

[dependencies]
rand = "0.8.5"
bevy_editor_pls = "0.4.0"